# biblioteca2_0

./: CMakeLists.txt  README.md  construir.bat  databasemanager.cpp  databasemanager.h  dialogobusquedalibro.cpp  dialogobusquedalibro.h  dialogobusquedalibro.ui  dialogolibro.cpp  dialogolibro.h  dialogolibro.ui  dialogoprestamo.cpp  dialogoprestamo.h  dialogoprestamo.ui  dialogousuario.cpp  dialogousuario.h  dialogousuario.ui  libro.cpp  libro.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  prestamo.cpp  prestamo.h  resources.qrc  usuario.cpp  usuario.h
.qtcreator/: CMakeLists.txt.user.45a4ec9
